--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,3 +1,38 @@
-<p>
-  task works!
-</p>
+<div class="container">
+  <h1>Task Manager</h1>
+  <div class="row">
+    <div class="col-12">
+      <ul class="list-group"></ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-9 col-lg-6">
+      <button class="add-task btn btn-primary" (click)="addTask()">Add new Task</button>
+      <div class="form">
+        <h2>Add a new Task</h2>
+        <form (submit)="addFormListener()">
+          <div class="form-group">
+            <label for="">Name of the Task</label>
+            <input type="text" [(ngModel)]="taskName" name="name" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label for="">Percentage finished</label>
+            <input type="number" [(ngModel)]="number" name="percentage" class="form-control"
+              name="Percentage"
+              type="number"
+              class="form-control"
+              step="any"
+              min="0"
+              max="1"
+            />
+          </div>
+          <div class="form-group">
+            <label for="">Description</label>
+            <textarea class="form-control" name="description"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
