--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,11 +1,9 @@
-
+<div class="welcome">
   <h1>
   {{title}}
 </h1>
-<!-- </div>
-<body style="background-color:bisque">
-<div>
-<img src="Sintra.jpg" alt="Sintra" width="550" height="400"/> 
+<div> 
+ <img src="/assets/Sintra.jpg" alt="Sintra" width="1000" height="400"/> 
 </div>
 <ul>
   <li>Sintra is a resort town in the foothills of Portugal’s Sintra Mountains, near the capital, Lisbon
@@ -17,6 +15,4 @@
   </li>
 </ul>
 <p>for more informaton visit<a href="http://www.sintra-portugal.com" target="_blank"> website</a></p>
-</body>
-
-</html> -->
+</div>
