--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -17,10 +17,8 @@
           </div>
           <div class="form-group">
             <label for="">Percentage finished</label>
-            <input type="number" [(ngModel)]="number" name="percentage" class="form-control"
-              name="Percentage"
+            <input [(ngModel)]="taskPercentage" name="percentage" class="form-control"
               type="number"
-              class="form-control"
               step="any"
               min="0"
               max="1"
