--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,7 +3,7 @@
   {{title}}
 </h1>
 <div> 
- <img src="/assets/Sintra.jpg" alt="Sintra" width="1000" height="400"/> 
+ <img src="https://raw.githubusercontent.com/tina-fernan/Angular/master/src/assets/Sintra.jpg" alt="Sintra" width="1000" height="400"/> 
 </div>
 <ul>
   <li>Sintra is a resort town in the foothills of Portugal’s Sintra Mountains, near the capital, Lisbon
