--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <a [routerLink]="'/welcome'">to the Tourismous-</a>
 <a [routerLink]="'/chess'">to the Chessboard-</a>
 <a [routerLink]="'/task-manager'">to the Task manger-</a>
-<a [routerLink]="'/heroes'">Heroes</a>
+<a [routerLink]="'/heroes'">Heroes-</a>
+<a [routerLink]="'/soudoku'">Soudoku</a>
+
 
 <router-outlet></router-outlet>
