--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,36 +1,11 @@
-<div class="container">
-  <h1>Task Manager</h1>
-  <div class="row">
-    <div class="col-12">
-      <ul class="list-group"></ul>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-md-9 col-lg-6">
-      <button class="add-task btn btn-primary" (click)="addTask()">Add new Task</button>
-      <div class="form">
-        <h2>Add a new Task</h2>
-        <form (submit)="addFormListener()">
-          <div class="form-group">
-            <label for="">Name of the Task</label>
-            <input type="text" [(ngModel)]="taskName" name="name" class="form-control" />
-          </div>
-          <div class="form-group">
-            <label for="">Percentage finished</label>
-            <input [(ngModel)]="taskPercentage" name="percentage" class="form-control"
-              type="number"
-              step="any"
-              min="0"
-              max="1"
-            />
-          </div>
-          <div class="form-group">
-            <label for="">Description</label>
-            <textarea class="form-control" name="description"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+<div class="row">
+  <div class="col-6">
+    <ul>
+      <li *ngFor="let task of tasks">
+        {{ task.name }}<span class="description">{{task.description}} </span></li>
+        </ul>
+        </div>
+        <div class="col-6">
+          <app-task-form (addTask)="addTaskToList($event)"></app-task-form>
+        </div>
+        </div>
