--- a/src/app/chess/chess.component.scss
+++ b/src/app/chess/chess.component.scss
@@ -1,26 +1,29 @@
-#chessboard {
-    width: 640px;
-    height: 640px;
-    margin: 20px;
-    border: 25px solid #333;
+
+.chessboard {
+   // width: 640px;
+   // height: 640px;
+   // margin: 20px;
+   // border: 25px solid #333;
+   width: calc((80px + 1px) * 8);
+   margin: 0 auto;
+   border: 4px solid black;
 }
-.black {
-    float: left;
-    width: 80px;
-    height: 80px;
-    background-color: #999;
-      font-size:50px;
-    text-align:center;
-    display: table-cell;
-    vertical-align:middle;
-}
-.white {
-    float: left;
-    width: 80px;
-    height: 80px;
-    background-color: #fff;
+.black, .white {
+    //float: left;
+   width: 80px;
+   height: 80px;
     font-size:50px;
     text-align:center;
     display: table-cell;
     vertical-align:middle;
+}
+.black {
+    background-color: rgb(114, 233, 217);
+
+}
+.white {
+    background-color: whitesmoke;
+}
+.row {
+    margin: 0;
 }
