--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Welcome</h1>
+<h1>welcome</h1>
 
 <a [routerLink]="'/welcome'">to the Tourismous-</a>
 <a [routerLink]="'/chess'">to the Chessboard-</a>
