--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <h1>welcome</h1>
 
-<a [routerLink]="'/welcome'">to the Tourismous-</a>
-<a [routerLink]="'/chess'">to the Chessboard-</a>
-<a [routerLink]="'/task-manager'">to the Task manger-</a>
-<a [routerLink]="'/heroes'">Heroes-</a>
-<a [routerLink]="'/soudoku'">Soudoku</a>
+<a [routerLink]="'/welcome'">The Tourismous__</a>
+<a [routerLink]="'/chess'">The Chessboard__</a>
+<a [routerLink]="'/task-manager'">The Task manger__</a>
+<a [routerLink]="'/heroes'">Heroes__</a>
+<a [routerLink]="'/soudoku'">Soudoku__</a>
+<a [routerLink]="'/per-basket'">Per-basket</a>
 
 
 <router-outlet></router-outlet>
