--- a/src/app/per-basket/per-basket.component.html
+++ b/src/app/per-basket/per-basket.component.html
@@ -2,7 +2,7 @@
 <ng-container *ngFor='let branch of branches'>
   <h3 > {{ branch.name }}</h3>
 <ng-container *ngFor='let basket of branch.baskets'>
-  <h4>{{basket.name}}</h4>
+  <h4>{{ basket.name }}</h4>
   <table class="table">
     <thead>
       <tr>
@@ -20,10 +20,12 @@
             <td>{{ basketItem.price }}</td>
           </tr>
     </tbody>
-  </table>
   <tfoot>
     <td colspan="3">Total Basket</td>
-    <td></td>
+    <td>{{ calculateBasketTotal(basket) }}</td>
+    
   </tfoot>
+</table>
 </ng-container>
+<h4>Branch Total: {{ calculateBranchTotal(branch) | currency:'$':symbol:'1.2-2'}} </h4>
 </ng-container>
