--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
-<h1>welcome</h1>
 
-<a [routerLink]="'/welcome'">The Tourismous__</a>
-<a [routerLink]="'/chess'">The Chessboard__</a>
-<a [routerLink]="'/task-manager'">The Task manger__</a>
-<a [routerLink]="'/heroes'">Heroes__</a>
-<a [routerLink]="'/soudoku'">Soudoku__</a>
-<a [routerLink]="'/per-basket'">Per-basket</a>
+  <h1>welcome</h1>
+  <div class="row">
+    <div class="col-12">
+      <ul class="row">
+        <li><a [routerLink]="'/welcome'">The Tourismous</a></li>
+        <li><a [routerLink]="'/chess'">The Chessboard</a></li>
+        <li><a [routerLink]="'/task-manager'">The Task-manager</a></li>
+        <li><a [routerLink]="'/heroes'">Heroes</a></li>
+        <li><a [routerLink]="'/soudoku'">Soudoku</a></li>
+        <li><a [routerLink]="'/per-basket'">Per-basket</a></li>
+        <li><a [routerLink]="'/per-product'">Per-product</a></li>
+      </ul>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
 
-
-<router-outlet></router-outlet>
