--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,20 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
   }
+  // ul {
+  //   list-style-type: none;
+  //   li {
+  //     padding: 0;   
+  //   }
+  // }
+  ul {
+    display: flex;
+    margin: 10px 0;
+    padding: 0;
+    justify-content: space-around;
+    li {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+    }
+  }
