--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<div class="container">
   <h1>welcome</h1>
   <div class="row">
     <div class="col-12">
@@ -8,10 +8,10 @@
         <li><a [routerLink]="'/task-manager'">The Task-manager</a></li>
         <li><a [routerLink]="'/heroes'">Heroes</a></li>
         <li><a [routerLink]="'/soudoku'">Soudoku</a></li>
-        <li><a [routerLink]="'/per-basket'">Per-basket</a></li>
-        <li><a [routerLink]="'/per-product'">Per-product</a></li>
+        <li><a [routerLink]="'/shop'">shop</a></li>
+      
       </ul>
     </div>
   </div>
   <router-outlet></router-outlet>
-
+</div>
