--- a/src/app/shop/product-list/product-list.component.html
+++ b/src/app/shop/product-list/product-list.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="products$ | async as products">
+  <a class="btn btn-primary" routerLink="/shop/add-product">add product</a>
   <table class="table">
     <thead>
       <th>Name</th>
@@ -7,11 +8,11 @@
       <th>&nbsp;</th>
     </thead>
     <tbody>
-      <tr * ngFor="let product of products">
-        <td>{{product.name}}</td>
-        <td> {{product.code}}</td>
-        <td> {{product.price}} </td>
-        <td></td>
+      <tr *ngFor="let product of products">
+        <td>{{ product.name }}</td>
+        <td> {{ product.code }}</td>
+        <td> {{ product.price }} </td>
+        <td><a class="btn btn-success" [routerLink]="['/','shop','edit-product',product.id]" >Edit</a></td>
       </tr>
     </tbody>
   </table>
